# ogj-ferium

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
libium/: Cargo.toml
libium/mod_version/: LICENSE
libium/mod_version/src/: fabric.rs  forge.rs  jar_manifest.rs  lib.rs
libium/src/: add.rs  lib.rs  scan.rs
libium/src/config/: structs.rs
libium/src/config/legacy/: filters.rs
libium/src/config/options/: mod.rs
libium/src/upgrade/: check.rs  dep_provider.rs  mod.rs  mod_downloadable.rs
libium/src/upgrade/dep_provider/: cache.rs  structs.rs  two_way.rs
libium/ziponline/: Cargo.toml
libium/ziponline/src/: lib.rs  parser.rs
src/: cli.rs  download.rs  lib.rs  main.rs  parser.rs  structs.rs
src/fabric/: version.rs
src/forge/: version.rs
src/subcommands/: list.rs  upgrade.rs
src/subcommands/profile/: create.rs  mod.rs
