[package]
name = "mod_version"
version = "0.1.0"
edition = "2024"

authors = ["OgGhostJelly"]
license = "MIT"
description = "Forge and Fabric manifest file parser."
repository = "https://github.com/ogghostjelly/mod_version"
keywords = ["minecraft", "version"]
categories = ["parser-implementations"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
serde_json = "1.0.145"
toml = { version = "0.9.7", features = ["serde"] }
